Height alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ input[disabled] {
   background: #0088CC;
   border-radius: 5px 5px 0 0;
   padding: 5px;
-  /* min-height: 4em; */
+  min-height: 80px;
 }
 
 .counter .name {
